# telegram-shop-remnawave

./: .gitignore  README.md  docker-compose.yml  events.py  initialize_remnawave.py  main.py  main_webhook.py  middleware.py  pyproject.toml
api/: crypto_webhook.py  cryptobot.py  tribute.py  user_manager.py
config/: dotenv.py  locale.py
database/: db.py  req.py
handlers/: admin_handlers.py  user_handlers.py
handlers/user/: user_handlers.py
keyboards/: user_keyboards.py
services/: user_service.py
