[project]
name = "telegram-shop-remnawave"
version = "0.1.0"
description = "Async shop with postresql database and remnawave panel integration,supports Cryptobot,Tribute"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.21.0",
    "aiosend>=2.1.2",
    "asyncpg>=0.30.0",
    "base58>=2.1.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "remnawave>=2.0.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
norecursedirs = ["pgdata"]
testpaths = ["tests"]